--- a/package.json
+++ b/package.json
@@ -5,20 +5,45 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start  -p 3333",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
+    "@ant-design/nextjs-registry": "^1.0.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
+    "antd": "^5.25.3",
+    "antd-style": "^3.7.1",
+    "apexcharts": "^4.7.0",
+    "bcrypt": "^6.0.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.13.0",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
+    "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^19.1.0",
+    "react-resizable": "^3.0.5",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/react-resizable": "^3.0.8",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
