--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "app/(protected)/ads-facebook/feature/funcs.tsx"  ],
   "exclude": [
     "node_modules"
   ]
